<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/colorMain"
    tools:context="com.example.yamgao.myappportfolio.MainActivity">

    <TextView
        android:id="@+id/my_app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="25sp"
        android:layout_marginTop="20dp"
        android:text="@string/title" />
    <Button
        android:id="@+id/button_1"
        android:text="@string/project1"
        style="@style/MyPortfolio"
        android:onClick="onClick" />
    <Button
        android:id="@+id/button_2"
        android:text="@string/project2"
        style="@style/MyPortfolio"
        android:onClick="onClick" />
    <Button
        android:id="@+id/button_3"
        android:text="@string/project3"
        style="@style/MyPortfolio"
        android:onClick="onClick" />
    <Button
        android:id="@+id/button_4"
        android:text="@string/project4"
        style="@style/MyPortfolio"
        android:onClick="onClick" />
    <Button
        android:id="@+id/button_5"
        android:text="@string/project5"
        style="@style/MyPortfolio"
        android:onClick="onClick" />
    <Button
        android:id="@+id/button_6"
        android:text="@string/project6"
        style="@style/MyPortfolio"
        android:onClick="onClick" />
</LinearLayout>
